# libxw

./: README.md  meson.build
examples/: keystate.c  meson.build  outputs.c  screenshot.c  toplevels.c
include/: config.h  keystate.h  meson.build  output.h  outputs.h  screenshot.h  toplevel.h  toplevels.h
protocol/: meson.build
src/: config.c  keystate-kde.c  keystate-kde.h  keystate-x11.c  keystate-x11.h  keystate.c  meson.build  output-wlroots.c  output-wlroots.h  output.c  outputs-wlroots.c  outputs-wlroots.h  outputs.c  screenshot-wlroots.c  screenshot-wlroots.h  screenshot.c  toplevel-wlroots.c  toplevel-wlroots.h  toplevel.c  toplevels-wlroots.c  toplevels-wlroots.h  toplevels.c
